5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4070/executions/1621_2923.log
== TEST (2019-04-01 19:07:48) 
-- CODE:
q0= 1500
t = 36
qf=(q0*("(1+j)**(36)")
print(round(qf,4))
-- ERROR:
File "XXXX", line 4
    print(round(qf,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:07:52) 
-- CODE:
q0= 1500
t = 36
qf=(q0*("(1+j)**(36)")
print(round(qf,4))
-- EXECUTION TIME:
0.159387
-- ERROR:
  File "/home/codebench/codes/1621/2923/main.py", line 4
    print(round(qf,4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:10:11) 
-- CODE:
q0= 1500
t = 36
j = float(input("juros:"))
qf=(q0*((1+j)**(36))
print(round(j,4))

-- EXECUTION TIME:
0.212567
-- ERROR:
  File "/home/codebench/codes/1621/2923/main.py", line 5
    print(round(j,4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:10:13) 
-- CODE:
q0= 1500
t = 36
j = float(input("juros:"))
qf=(q0*((1+j)**(36))
print(round(j,4))

-- ERROR:
File "XXXX", line 5
    print(round(j,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:10:22) 
-- CODE:
q0= 1500
t = 36
j = float(input("juros:"))
qf=(q0*((1+j)**(36))
print(round(qf,4))

-- ERROR:
File "XXXX", line 5
    print(round(qf,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:18:48) 
-- CODE:
q0= 1500
t = 36
j = float(input("juros:"))

qf=(q0*((1+j)**(t))

print(round(qf,))

-- ERROR:
File "XXXX", line 7
    print(round(qf,))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:18:57) 
-- CODE:
q0= 1500
t = 36
j = float(input("juros:"))

qf=(q0*((1+j)**(t))

print(round(qf,2))

-- ERROR:
File "XXXX", line 7
    print(round(qf,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:19:12) 
-- CODE:
q0= 1500
t = 36
j = float(input("juros:"))

qf=(q0*((1+j)**(t))

print(round(qf,))

-- ERROR:
File "XXXX", line 7
    print(round(qf,))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:19:25) 
-- CODE:
q0= 1500
t = 36
j = float(input("juros:"))

qf=(q0*((1+j)**(t))

print(round("qf,"))

-- ERROR:
File "XXXX", line 7
    print(round("qf,"))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:37:49) 
-- CODE:
q0= 1500
t = 36
j = float(input("juros:"))
taxa=(1+j)**(t)
qf=(q0*taxa)
taxa=qf//q0
print(round(taxa,3))


-- OUTPUT:
9577.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:38:01) 
-- CODE:
q0= 1500
t = 36
j = float(input("juros:"))
taxa=(1+j)**(t)
qf=(q0*taxa)
taxa=qf//q0
print(round(taxa,3))


-- EXECUTION TIME:
0.166787
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
9577.0
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
26.0
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
92.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:42:26) 
-- CODE:
q0= 1500
t = 36
j = float(input("juros:"))
taxa=(1+j)**(t)
qf=(q0*taxa)
juros=qf//q0
print(round(juros,3))


-- OUTPUT:
9577.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:42:38) 
-- CODE:
q0= 1500
t = 36
taxa=(1+j)**(t)
qf=(q0*taxa)
juros=qf//q0
print(round(juros,3))


-- EXECUTION TIME:
0.139723
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2923/main.py", line 3, in <module>
    taxa=(1+j)**(t)
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:47:38) 
-- CODE:
q0= 1500
t = 36
j=0.1
qf=q0*(1+0.1)**t
print(round(qf,3)


-- EXECUTION TIME:
0.180844
-- ERROR:
  File "/home/codebench/codes/1621/2923/main.py", line 7
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:47:41) 
-- CODE:
q0= 1500
t = 36
j=0.1
qf=q0*(1+0.1)**t
print(round(qf,3)


-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:48:10) 
-- CODE:
q0= 1500
t = 36
j=0.1
qf=q0*(1+j)**t

print(round(qf,3)


-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:50:15) 
-- CODE:
q0= 1500
t = 36
qf=float(input("valorfinal:"))
qf=q0*(1+j)**t
taxa=(q0*(1+j)**t)//qf
print(round(taxa,3)


-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:50:34) 
-- CODE:
q0= 1500
t = 36
qf=float(input("valorfinal:"))
qf=q0*(1+j)**t
taxa=(q0*(1+j)**t)//qf

print(round(taxa,3)


-- EXECUTION TIME:
0.154416
-- ERROR:
  File "/home/codebench/codes/1621/2923/main.py", line 9
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
